@@ -1,8 +1,9 @@
 Revision history for Datahub-Factory
 
 {{$NEXT}}
-	- added: missing dependency Catmandu::Importer::XML
-	- fixed: string check condition
+    - changed: confrom to new Catmandu::Store::Datahub API
+    - added: missing dependency Catmandu::Importer::XML
+    - fixed: string check condition
 
 1.3  2017-05-12 12:45:35 UTC
 	- Improved error handling: try/catch and Catmandu::Error->throw
